--- a/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
+++ b/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
@@ -905,6 +905,179 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc16e6b5-205f-4523-89ef-df58075f0e7c",
+   "metadata": {},
+   "source": [
+    "## 24.3 Deploying a Model with Fast API <a id=\"24.3-deploying-a-model-with-fast-api\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0023506-d262-4a9c-9a93-eb2d81916c56",
+   "metadata": {},
+   "source": [
+    "This section explains how to develop a RESTful API for classification of Iris flowers with the Fast API library. \n",
+    "The code is similar to the Flask app, but there are several differences in the syntax and the implementation. \n",
+    "\n",
+    "Before developing the API, we need to install the required libraries with `pip install fastapi, python-multipart, uvicorn`.\n",
+    "\n",
+    "The code for the `app.py` server in Fast API is shown below.\n",
+    "\n",
+    "First, we import modules from Fast API for handling HTTP requests and exceptions, and for template rendering. \n",
+    "\n",
+    "Next, we instantiate the `app` web application from the `FastAPI()` class. And we define the directory with the HTML templates. Fast API uses Jinja2 for template rendering, allowing to create dynamic HTML pages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0db16173-746a-441e-8ace-7e33a6f4e988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "from fastapi import FastAPI, Request, Depends, Form, HTTPException\n",
+    "from fastapi.templating import Jinja2Templates\n",
+    "from typing import Optional\n",
+    "import model\n",
+    "\n",
+    "# Initialize the FastAPI class and specify the templates directory\n",
+    "app = FastAPI()\n",
+    "templates = Jinja2Templates(directory=\"templates\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b151226a-7749-4cdb-a2c4-ffcfbce2af14",
+   "metadata": {},
+   "source": [
+    "Similar to the Flask app, in Fast API we use the `@app.get('/')` decorator to associate the HTTP GET method with the default home page of the application. In Fast API, the `Request` class is used to handle the incoming requests, where `request` is an instance that contains the information about the HTTP request. The `index_view` function will render a template of the `index.html` file and will pass the `request` object to it.  \n",
+    "\n",
+    "The `'/predict'` route will handle the GET request. The `predict_class` function retrieves the input values `slen`, `swid`, `plen`, and `pwid` and calls `model.classify()` to predict the variety of the Iris flower. If there are no errors, the function will render a template of the `output.html` file and will pass the `variety` to be displayed to the user.\n",
+    "\n",
+    "Finally, the web application is run using the `uvicorn` server. UVicorn is the default server for Fast API in Python. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faa98b56-d43b-4927-850b-adab5a326541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Default route set as 'index'\n",
+    "@app.get('/')\n",
+    "def index_view(request: Request):\n",
+    "    return templates.TemplateResponse(\"index.html\", {\"request\": request})\n",
+    "\n",
+    "# Route 'predict' accepts GET request\n",
+    "@app.get('/predict')\n",
+    "def predict_class(request: Request, \n",
+    "                  slen: Optional[float] = None, \n",
+    "                  swid: Optional[float] = None, \n",
+    "                  plen: Optional[float] = None, \n",
+    "                  pwid: Optional[float] = None):\n",
+    "    try:\n",
+    "        # Get the output from the classification model\n",
+    "        variety = model.classify(slen, swid, plen, pwid)\n",
+    "\n",
+    "        # Render the output in a new HTML page\n",
+    "        return templates.TemplateResponse(\"output.html\", {\"request\": request, \"variety\": variety})\n",
+    "    except Exception as e:\n",
+    "        raise HTTPException(status_code=500, detail=f\"An error occurred: {str(e)}\")\n",
+    "\n",
+    "# Run the FastAPI server\n",
+    "if __name__ == '__main__':\n",
+    "    import uvicorn\n",
+    "    uvicorn.run(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed1524ea-5c94-41b7-9a53-0313b19cb275",
+   "metadata": {},
+   "source": [
+    "## 24.4 Deploying a Model with Django <a id=\"24.4-deploying-a-model-with-django\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da81be2e-72aa-44d5-8392-c450a4ad64b2",
+   "metadata": {},
+   "source": [
+    "The corresponding code for developing a RESTful API for classification of Iris flowers with the Django library is shown below. Please note that this code is a minimal app that is written to show the similarities with Flask and Fast API. In practice, the web APIs developed with Django are expected to follow a defined program structure. A simple example is presented in the Appendix of this lecture.\n",
+    "\n",
+    "In the code below, the functions `index_view` and `predict_class` define the rendering of the home page and the predicted outputs by the model, similar to the apps in Flask and Fast API.\n",
+    "\n",
+    "The URL patterns define that the root path maps to the `index_view` function, and the `'predict'` path maps to the `predict_class` function.\n",
+    "\n",
+    "The last part of the code defines the configuration settings and the execution of the server with `app.py runserver`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a43a7959-373a-47f8-8419-9e403ecb0b72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from django.shortcuts import render\n",
+    "from django.http import HttpResponse\n",
+    "from django.urls import path\n",
+    "import model\n",
+    "\n",
+    "# Default route set as 'index'\n",
+    "def index_view(request):\n",
+    "    return render(request, 'index.html')\n",
+    "\n",
+    "# Route 'predict' accepts GET request\n",
+    "def predict_class(request):\n",
+    "    try:\n",
+    "        slen = float(request.GET.get('slen'))\n",
+    "        swid = float(request.GET.get('swid'))\n",
+    "        plen = float(request.GET.get('plen'))\n",
+    "        pwid = float(request.GET.get('pwid'))\n",
+    "\n",
+    "        # Get the output from the classification model\n",
+    "        variety = model.classify(slen, swid, plen, pwid)\n",
+    "\n",
+    "        # Render the output in a new HTML page\n",
+    "        return render(request, 'output.html', {'variety': variety})\n",
+    "    except Exception as e:\n",
+    "        return HttpResponse(f\"An error occurred: {str(e)}\", status=500)\n",
+    "\n",
+    "# URL patterns define which function is called for specific URL paths\n",
+    "urlpatterns = [path('', index_view),\n",
+    "    path('predict/', predict_class)]\n",
+    "\n",
+    "# Django settings and execution\n",
+    "if __name__ == '__main__':\n",
+    "    from django.conf import settings\n",
+    "\n",
+    "    # Define the templates directory and debug mode    \n",
+    "    settings.configure(\n",
+    "        DEBUG=True,\n",
+    "        ROOT_URLCONF=__name__,\n",
+    "        TEMPLATES=[\n",
+    "            {\n",
+    "                'BACKEND': 'django.template.backends.django.DjangoTemplates',\n",
+    "                'DIRS': ['templates'],\n",
+    "                'APP_DIRS': True,\n",
+    "            },\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
+    "    # Execute the server from the command line    \n",
+    "    import django\n",
+    "    django.setup()\n",
+    "\n",
+    "    from django.core.management import execute_from_command_line\n",
+    "\n",
+    "    execute_from_command_line(['app.py', 'runserver'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "389368f9",
    "metadata": {},
    "source": [
