--- a/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
+++ b/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
@@ -1078,6 +1078,426 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b0f1b74-3da6-4ffb-873f-845a9778f0d7",
+   "metadata": {},
+   "source": [
+    "## 24.5 Deploying a Model for MNIST Digits Classification with Flask <a id=\"24.5-deploying-a-model-for-mnist-digits-classification-with-flask\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86e21732-20d1-4043-90d7-423408799261",
+   "metadata": {},
+   "source": [
+    "In this section we will create another web API for classification of MNIST digits. Differently from the previous section, we will use a Convolutional Neural Network model, as well as, we will save the trained model and use it for prediction. The code is mostly based on this section from the following blog: [Deploying Deep Learning Models Part 1: Preparing the Model](https://blog.paperspace.com/deploying-deep-learning-models-flask-web-python/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77e34ce4-cabc-4b4f-a7ec-a33ffa77abbc",
+   "metadata": {},
+   "source": [
+    "### 24.5.1 Model Training and Saving <a id=\"24.5.1-model-training-and-saving\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "944249b7-e6b3-44fb-b16b-6c19a0d0f0f9",
+   "metadata": {},
+   "source": [
+    "We will first load the MNIST dataset, and we will create a simple Convolutional Neural Network for classification of the digit images in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d49de89b-659a-4b3f-92ff-b99bd86a0909",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow\n",
+    "from tensorflow import keras\n",
+    "from keras.datasets import mnist\n",
+    "from keras.models import Model\n",
+    "from keras.layers import Input, Dense, Dropout, Flatten, Conv2D, MaxPooling2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "06e068e4-9598-4b92-8df5-7fe8aae493dc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Load the data\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9c295546-fb6f-42d6-9361-06912fde4789",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train shape: (60000, 28, 28)\n",
+      "60000 train samples\n",
+      "10000 test samples\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scale the images to the range [0,1]\n",
+    "x_train = x_train.astype('float32')\n",
+    "x_test = x_test.astype('float32')\n",
+    "x_train /= 255\n",
+    "x_test /= 255\n",
+    "\n",
+    "# Print the shape and number of samples\n",
+    "print('x_train shape:', x_train.shape)\n",
+    "print(x_train.shape[0], 'train samples')\n",
+    "print(x_test.shape[0], 'test samples')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2ba872db-c57b-4fef-8e6d-569b023dc2aa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Define the layers in the model\n",
+    "inputs = Input(shape=(28, 28, 1))\n",
+    "conv1a = Conv2D(filters=32, kernel_size=3, padding='same')(inputs)\n",
+    "conv1b = Conv2D(filters=64, kernel_size=3, padding='same')(conv1a)\n",
+    "pool1 = MaxPooling2D()(conv1b)\n",
+    "flat = Flatten()(pool1)\n",
+    "dense1 = Dense(128, activation='relu')(flat)\n",
+    "dropout1 = Dropout(0.5)(dense1)\n",
+    "outputs = Dense(10, activation='softmax')(dropout1)\n",
+    "\n",
+    "# Define the model with inputs and outputs\n",
+    "model = Model(inputs, outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f45ff5c0-ff8e-488c-8f35-ae87134b0c37",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x1bcccb76090>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compile and train the model\n",
+    "model.compile(loss='sparse_categorical_crossentropy',\n",
+    "              optimizer='adam',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(x_train, y_train, batch_size=128, epochs=5, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2d461810-ac73-4797-8a4a-489eef583b1d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.9840999841690063\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate on test dataset\n",
+    "score = model.evaluate(x_test, y_test, verbose=0)\n",
+    "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a064c2b8-642d-461f-a57a-40b5db96f966",
+   "metadata": {},
+   "source": [
+    "Next, we will save the model using the Keras-TensorFlow SaveModel format. We will use the saved model to make predictions in the web application without retraining the model, since training the model takes time and there is no need to train a new model every time the end-users need to make predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c1c9e579-9277-4eec-a570-ec8c521efac8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# save the model to a file\n",
+    "model.save(\"mnist_model.keras\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad8b68be-5a24-4f31-aa08-a5e0613e3c18",
+   "metadata": {},
+   "source": [
+    "To make predictions, we can load the model and compile it, as in the following cell. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c24e2583-98dc-44c6-9e8b-9d366bd17590",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.9840999841690063\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "\n",
+    "# load the weights into new model\n",
+    "loaded_model = load_model(\"mnist_model.keras\")\n",
+    "\n",
+    "# Compile and evaluate loaded model\n",
+    "loaded_model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "# Evaluate on test dataset\n",
+    "score = loaded_model.evaluate(x_test, y_test, verbose=0)\n",
+    "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa6ecc5b-3737-4ec3-ba9d-ba040c922890",
+   "metadata": {},
+   "source": [
+    "### 24.5.2 Creating a Flask App <a id=\"24.5.2-creating-a-flask-app\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aeda7ad-f271-4908-aaee-6d4ef87f525b",
+   "metadata": {},
+   "source": [
+    "To deploy the model we will create the `app.py` file, which is similar to the Flask file in the above section.\n",
+    "\n",
+    "We will define again two routes in the Flask app:\n",
+    "\n",
+    "- An index (home) page route `'/'`, for the users to draw a digit image.\n",
+    "- A predict route `'/predict'`, to predict the class of the digit with the saved model.\n",
+    "\n",
+    "In the next cell, we first import the required libraries, and an `app` object is created that is an instance of the Flask class. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "487d9b2b-0592-499b-a90a-b3005ef65d47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, render_template, request\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import re\n",
+    "import base64\n",
+    "\n",
+    "# Initialize the flask class and specify the templates directory\n",
+    "app = Flask(__name__, template_folder=\"templates\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a67054-add4-4e19-9366-25abf5fb88fe",
+   "metadata": {},
+   "source": [
+    "Similar to the previous example, we define the home page route using the `@app.route` decorator, and pass the URL of the main page of the web application `index.html`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ebd1920-606b-48ab-979b-0ff54d08c6f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Default route set as 'index'\n",
+    "@app.route('/')\n",
+    "def index_view():\n",
+    "    return render_template('index.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e1d3d62-c1e0-44c6-a4a6-0e9574d5c2ef",
+   "metadata": {},
+   "source": [
+    "The `'/predict'` route is shown next, which gets the image of a digit drawn by the user, and it first applies image resizing and reshaping, and afterward the saved model is used to predict the digit class. Output is the `response` variable that returns a string of the predicted class. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b8c54c6-6a41-4e58-b230-88ccb0817409",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Route 'predict' \n",
+    "@app.route('/predict', methods=['GET', 'POST'])\n",
+    "def predict_class():\n",
+    "    \n",
+    "    # Get the drawn image\n",
+    "    imgData = request.get_data()\n",
+    "    \n",
+    "    # Convert the image into a png file\n",
+    "    convertImage(imgData)\n",
+    "\n",
+    "    # Open the png file    \n",
+    "    x = Image.open('output.png')\n",
+    "\n",
+    "    # Resize the image to 28x28 pixels      \n",
+    "    x = x.resize((28,28))\n",
+    "\n",
+    "    # Invert the image into black background and white foreground    \n",
+    "    x = np.invert(x)\n",
+    "\n",
+    "    # Reshape into a batch with one image    \n",
+    "    x = x[:,:,0].reshape(1, 28, 28, 1)\n",
+    "    \n",
+    "    # Scale to the range [0,1]\n",
+    "    x = x/255\n",
+    "    \n",
+    "    # Make a prediction\n",
+    "    out = model.predict(x)\n",
+    "    \n",
+    "    # Get the predicted digit\n",
+    "    response = np.array_str(np.argmax(out, axis=1))\n",
+    "    \n",
+    "    return response\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e70274ad-6bf2-428b-ac26-719a421f8b1e",
+   "metadata": {},
+   "source": [
+    "And finally, we run the app in debug mode. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "524ddd61-ddaf-412e-965f-e9039beaaeba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the Flask server\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75653782-12d7-4e6b-a877-ba9277bf8cbe",
+   "metadata": {},
+   "source": [
+    "The organization of the directory of the web application is shown below. Beside the `app.py`, the main directory also contains the saved model `mnist_model.keras` and the image drawn by the users saved as `output.png`. The `templates` sub-directory contains the `index.html` and `draw.html` pages. In the `static` folder, a JavaScript file `index.js` is used to render a canvas for drawing digits by the users, and `style.css` is a stylesheet for the web application.  \n",
+    "\n",
+    "```\n",
+    "MNIST-API\n",
+    "    ├── app.py\n",
+    "    ├── mnist_model.keras\n",
+    "    ├── output.png\n",
+    "    ├── templates\n",
+    "    │   ├── index.html\n",
+    "    │   ├── draw.html\n",
+    "    ├── static\n",
+    "    │   ├── index.js\n",
+    "    │   ├── style.css\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0b6216d-8712-4fef-9521-47bd73de86a5",
+   "metadata": {},
+   "source": [
+    "### 24.5.3 Run the Web Application <a id=\"24.5.3-run-the-web-application\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c118626-49f1-4137-bd6f-48ae5c1a2cb4",
+   "metadata": {},
+   "source": [
+    "We can run the application using `python app.py`, and we will click on the URL `http://127.0.0.1:5000/` to access the web API shown below. We can use the mouse pointer to draw digits, and the `Predict` button will display the Predicted Output by the model. The `Clear` button allows to draw again and make a new prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abc3423b-1db2-46c2-aed0-62bb28022a06",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/mnist_run.png\" width=\"1000\">\n",
+    "\n",
+    "<img src=\"images/mnist_prediction.png\" width=\"400\">\n",
+    "\n",
+    "*Figure: Run the web application.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11558aae-3aa2-4d1f-86b0-57d69c92e3c7",
+   "metadata": {},
+   "source": [
+    "## Appendix  <a id=\"appendix\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aa760ff-2f9f-4143-bd73-9538c91a7a1b",
+   "metadata": {},
+   "source": [
+    "**The material in the Appendix is not required for quizzes and assignments.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "389368f9",
    "metadata": {},
    "source": [
