--- a/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
+++ b/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
@@ -1498,6 +1498,149 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8abb075-dfe7-48de-b33b-77e308d127a6",
+   "metadata": {},
+   "source": [
+    "A Django project for a web API typically has a structured project organization designed for modularity, maintainability, and scalability. A typical project structure for a Django web API has a main project directory (containing files for settings, URLs, and WSGI files), an application directory (containing files for models, URLs, views, tests, data format conversion), a command-line utility, and additional files, such as README, requirements, etc.\n",
+    "\n",
+    "For classification of Iris flowers, one possible project structure for a web API with Django is shown below, with \n",
+    "the files saved in the directory `Django-Iris-Project`.\n",
+    "\n",
+    "```\n",
+    "Django-Iris-Project\n",
+    "    ├── iris_api\n",
+    "    │   ├── __init__.py\n",
+    "    │   ├── iris.csv\n",
+    "    │   ├── model.py\n",
+    "    │   ├── urls.py\n",
+    "    │   ├── views.py\n",
+    "    ├── iris_project\n",
+    "    │   ├── __init__.py\n",
+    "    │   ├── settings.py\n",
+    "    │   ├── urls.py\n",
+    "    │   ├── wsgi.py\n",
+    "    ├── templates\n",
+    "    │   ├── index.html\n",
+    "    │   ├── draw.html\n",
+    "    ├── manage.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eee0542-13b7-47d8-a5a5-22b983f52821",
+   "metadata": {},
+   "source": [
+    "The subdirectory `iris_api` contains `model.py` which is the same as the file that we used in the above section, and the files `urls.py`, and `views.py`. The content of these files is shown in the next cells. As expected, `urls.py` contains the routing configuration for mapping the URLs for the home and predict pages to the corresponding views. The `views.py` file contains the `index_view` to render the home page, and `predict_class` to handle requests and make predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48b24418-8ce0-4a7e-9bdc-192197cb4f9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iris_api/urls.py\n",
+    "from django.urls import path\n",
+    "from . import views\n",
+    "\n",
+    "urlpatterns = [\n",
+    "    path('', views.index_view, name='index'),\n",
+    "    path('predict/', views.predict_class, name='predict'),\n",
+    "] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6a1ea1b-4422-4daf-803a-2b9ed08a1b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iris_api/views.py\n",
+    "from django.shortcuts import render\n",
+    "from django.http import HttpResponse\n",
+    "from . import model\n",
+    "\n",
+    "def index_view(request):\n",
+    "    return render(request, 'index.html')\n",
+    "\n",
+    "def predict_class(request):\n",
+    "    try:\n",
+    "        slen = float(request.GET.get('slen'))\n",
+    "        swid = float(request.GET.get('swid'))\n",
+    "        plen = float(request.GET.get('plen'))\n",
+    "        pwid = float(request.GET.get('pwid'))\n",
+    "\n",
+    "        # Get the output from the classification model\n",
+    "        variety = model.classify(slen, swid, plen, pwid)\n",
+    "\n",
+    "        # Render the output in a new HTML page\n",
+    "        return render(request, 'output.html', {'variety': variety})\n",
+    "    except Exception as e:\n",
+    "        return HttpResponse(f\"An error occurred: {str(e)}\", status=500) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71e6be6e-57d0-4a6d-9f73-ac25f7bfb248",
+   "metadata": {},
+   "source": [
+    "The subdirectory `iris_project` contains the files `settings.py`, `urls.py`, and `wsgi.py`. The `settings.py` file contains important settings like database configuration, installed apps, middleware, etc. The content of `wsgi.py` is shown below, and it sets up the configuration for the Web Server Gateway Interface (WSGI) for the project. This file links the Django application with a WSGI server by defining the application object, which the server invokes to handle requests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad4c401b-0521-4877-9b0f-ed6cabb00384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iris_api/wsgi.py\n",
+    "import os\n",
+    "from django.core.wsgi import get_wsgi_application\n",
+    "\n",
+    "os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'iris_project.settings')\n",
+    "\n",
+    "application = get_wsgi_application() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b06280b-8ab9-4bf8-a820-2fbf8dd0e35e",
+   "metadata": {},
+   "source": [
+    "The `manage.py` file is a main command-line utility in Django for running the server, or for performing other tasks. In this case, it sets the environment variable for the project settings file (`iris_project.settings`), and imports the `execute_from_command_line function` which processes command-line arguments and executes the Django command `runserver`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f525ec2a-6619-4d67-9d18-79bd896ee9a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# manage.py\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "def main():\n",
+    "    os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'iris_project.settings')\n",
+    "    try:\n",
+    "        from django.core.management import execute_from_command_line\n",
+    "    except ImportError as exc:\n",
+    "        raise ImportError(\n",
+    "            \"Couldn't import Django. Are you sure it's installed?\"\n",
+    "        ) from exc\n",
+    "    execute_from_command_line(sys.argv)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "389368f9",
    "metadata": {},
    "source": [
