--- a/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
+++ b/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
@@ -1641,6 +1641,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c10702ad-9986-4550-b356-fb86789bf0ff",
+   "metadata": {},
+   "source": [
+    "To run the server we use `python manage.py runserver`, and click on the URL to start the application on the local machine.\n",
+    "\n",
+    "<img src=\"images/Django_Project.png\" width=\"1000\">\n",
+    "\n",
+    "*Figure: Run the application.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "389368f9",
    "metadata": {},
    "source": [
