--- a/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
+++ b/docs/Lectures/Theme_4-Model_Deployment/Lecture_24-Deploying_to_Web/Lecture_24-Deploying_to_Web.ipynb
@@ -88,7 +88,13 @@
    "id": "557e8163-dceb-4e95-994e-5aa218ef6114",
    "metadata": {},
    "source": [
-    "Two common approaches for building web APIs are SOAP (Service Object Access Protocol) and REST (REpresentational State Transfer). Whereas SOAP is a protocol for communication between computer systems, REST is an architecture that defines a set of constraints for communication over a network and promotes simplicity, scalability, and reliability. REST has been very popular for building web APIs, since it introduces guidelines regarding the architecture of an API, instead of defining rules of specifications for the data exchange.\n",
+    "Three common approaches for building web APIs for Data Science applications are: SOAP (Simple Object Access Protocol), REST (REpresentational State Transfer), and gRPC (Remote Procedure Call). \n",
+    "\n",
+    "SOAP is a protocol for communication between computer systems, defined by the World Wide Web Consortium that uses XML for message formatting and relies on application layer protocols (e.g., HTTP, SMTP) for message negotiation and transmission. However, the strict strandards of SOAP make it less developer-friendly, and it has been less popular for building web APIs for Data Science compared to REST and gRPC.\n",
+    "\n",
+    "REST is an architecture (not a protocol) that defines a set of constraints for communication over a network and promotes simplicity, scalability, and reliability. It uses HTTP methods for communication and data exchange. REST has been very popular for building web APIs, since it introduces guidelines regarding the architecture of an API instead of defining rules of specifications for the data exchange, it is easy to implement, and it is supported by many libraries and tools.\n",
+    "\n",
+    "gRPC is a high-performance, open-source framework developed by Google, that uses Protocol Buffers (Protobuf) for defining API communication and serializing data. gRPC's high performance and real-time streaming capabilities make it increasingly popular for developing web APIs for Data Science projects. However, it requires the use of Protobuf and additional gRPC tools and plugins, which add complexity in setting up the development environment and learning the syntax in comparison to REST.\n",
     "\n",
     "**REST (REpresentational State Transfer)** defines the following architectural constraints:\n",
     "\n",
@@ -101,7 +107,7 @@
     "\n",
     "An API that adheres to the REST guidelines is referred to as **RESTful API** or simply REST API. \n",
     "\n",
-    "RESTful APIs provide access to web services through public web URLs, referred to as request endpoints. The client sends an HTTP request to the specific URL, and the RESTful API uses HTTP methods to manage the resources in the web service. Although there are many HTTP methods, the most commonly used methods with RESTful APIs include: `GET` (retrieve resources), `POST` (create a new resource), `PUT` (update an existing resource), `PATCH` (partially update an existing resource), and `DELETE` (delete a resource). "
+    "RESTful APIs provide access to web services through public web URLs, referred to as endpoints. The client sends an HTTP request to the specific URL, and the RESTful API uses HTTP methods to manage the resources in the web service. Although there are many HTTP methods, the most commonly used methods with RESTful APIs include: `GET` (retrieve resources), `POST` (create a new resource), `PUT` (update an existing resource), `PATCH` (partially update an existing resource), and `DELETE` (delete a resource). "
    ]
   },
   {
@@ -923,7 +929,7 @@
     "\n",
     "The code for the `app.py` server in Fast API is shown below.\n",
     "\n",
-    "First, we import modules from Fast API for handling HTTP requests and exceptions, and for template rendering. \n",
+    "First, we import modules from Fast API for handling HTTP requests and for template rendering. \n",
     "\n",
     "Next, we instantiate the `app` web application from the `FastAPI()` class. And we define the directory with the HTML templates. Fast API uses Jinja2 for template rendering, allowing to create dynamic HTML pages."
    ]
@@ -936,9 +942,8 @@
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "from fastapi import FastAPI, Request, Depends, Form, HTTPException\n",
+    "from fastapi import FastAPI, Request\n",
     "from fastapi.templating import Jinja2Templates\n",
-    "from typing import Optional\n",
     "import model\n",
     "\n",
     "# Initialize the FastAPI class and specify the templates directory\n",
@@ -953,7 +958,7 @@
    "source": [
     "Similar to the Flask app, in Fast API we use the `@app.get('/')` decorator to associate the HTTP GET method with the default home page of the application. In Fast API, the `Request` class is used to handle the incoming requests, where `request` is an instance that contains the information about the HTTP request. The `index_view` function will render a template of the `index.html` file and will pass the `request` object to it.  \n",
     "\n",
-    "The `'/predict'` route will handle the GET request. The `predict_class` function retrieves the input values `slen`, `swid`, `plen`, and `pwid` and calls `model.classify()` to predict the variety of the Iris flower. If there are no errors, the function will render a template of the `output.html` file and will pass the `variety` to be displayed to the user.\n",
+    "The `'/predict'` route will handle the GET request. The `predict_class` function retrieves the input values `slen`, `swid`, `plen`, and `pwid` and calls `model.classify()` to predict the variety of the Iris flower. The function will render a template of the `output.html` file and will pass `variety` to be displayed to the user.\n",
     "\n",
     "Finally, the web application is run using the `uvicorn` server. UVicorn is the default server for Fast API in Python. "
    ]
@@ -972,19 +977,12 @@
     "\n",
     "# Route 'predict' accepts GET request\n",
     "@app.get('/predict')\n",
-    "def predict_class(request: Request, \n",
-    "                  slen: Optional[float] = None, \n",
-    "                  swid: Optional[float] = None, \n",
-    "                  plen: Optional[float] = None, \n",
-    "                  pwid: Optional[float] = None):\n",
-    "    try:\n",
+    "def predict_class(request: Request, slen, swid, plen, pwid):\n",
     "        # Get the output from the classification model\n",
     "        variety = model.classify(slen, swid, plen, pwid)\n",
     "\n",
     "        # Render the output in a new HTML page\n",
     "        return templates.TemplateResponse(\"output.html\", {\"request\": request, \"variety\": variety})\n",
-    "    except Exception as e:\n",
-    "        raise HTTPException(status_code=500, detail=f\"An error occurred: {str(e)}\")\n",
     "\n",
     "# Run the FastAPI server\n",
     "if __name__ == '__main__':\n",
@@ -1021,9 +1019,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import django\n",
     "from django.shortcuts import render\n",
-    "from django.http import HttpResponse\n",
     "from django.urls import path\n",
+    "from django.core.management import execute_from_command_line\n",
+    "from django.conf import settings\n",
     "import model\n",
     "\n",
     "# Default route set as 'index'\n",
@@ -1032,19 +1032,16 @@
     "\n",
     "# Route 'predict' accepts GET request\n",
     "def predict_class(request):\n",
-    "    try:\n",
-    "        slen = float(request.GET.get('slen'))\n",
-    "        swid = float(request.GET.get('swid'))\n",
-    "        plen = float(request.GET.get('plen'))\n",
-    "        pwid = float(request.GET.get('pwid'))\n",
+    "    slen = float(request.GET.get('slen'))\n",
+    "    swid = float(request.GET.get('swid'))\n",
+    "    plen = float(request.GET.get('plen'))\n",
+    "    pwid = float(request.GET.get('pwid'))\n",
     "\n",
-    "        # Get the output from the classification model\n",
-    "        variety = model.classify(slen, swid, plen, pwid)\n",
+    "    # Get the output from the classification model\n",
+    "    variety = model.classify(slen, swid, plen, pwid)\n",
     "\n",
-    "        # Render the output in a new HTML page\n",
-    "        return render(request, 'output.html', {'variety': variety})\n",
-    "    except Exception as e:\n",
-    "        return HttpResponse(f\"An error occurred: {str(e)}\", status=500)\n",
+    "    # Render the output in a new HTML page\n",
+    "    return render(request, 'output.html', {'variety': variety})\n",
     "\n",
     "# URL patterns define which function is called for specific URL paths\n",
     "urlpatterns = [path('', index_view),\n",
@@ -1052,27 +1049,15 @@
     "\n",
     "# Django settings and execution\n",
     "if __name__ == '__main__':\n",
-    "    from django.conf import settings\n",
     "\n",
     "    # Define the templates directory and debug mode    \n",
     "    settings.configure(\n",
     "        DEBUG=True,\n",
     "        ROOT_URLCONF=__name__,\n",
-    "        TEMPLATES=[\n",
-    "            {\n",
-    "                'BACKEND': 'django.template.backends.django.DjangoTemplates',\n",
-    "                'DIRS': ['templates'],\n",
-    "                'APP_DIRS': True,\n",
-    "            },\n",
-    "        ],\n",
-    "    )\n",
+    "        TEMPLATES=[{ 'BACKEND': 'django.template.backends.django.DjangoTemplates', 'DIRS': ['templates'], 'APP_DIRS': True, }, ], )\n",
     "\n",
     "    # Execute the server from the command line    \n",
-    "    import django\n",
     "    django.setup()\n",
-    "\n",
-    "    from django.core.management import execute_from_command_line\n",
-    "\n",
     "    execute_from_command_line(['app.py', 'runserver'])"
    ]
   },
@@ -1689,7 +1674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
