--- a/docs/Lectures/Theme_4-Model_Deployment/Lecture_25-Deploying_to_Cloud/Lecture_25-Deploying_to_Cloud.ipynb
+++ b/docs/Lectures/Theme_4-Model_Deployment/Lecture_25-Deploying_to_Cloud/Lecture_25-Deploying_to_Cloud.ipynb
@@ -620,12 +620,9 @@
     "\n",
     "body = str.encode(json.dumps(data))\n",
     "\n",
-    "url = 'http://a836b469-9573-4a63-bd31-90e8205ae13c.westus2.azurecontainer.io/score'\n",
-    "api_key = 'QYEGDiZFpL5OECR2aZEhhNfSfYhPvgVn' # Replace this with the API key for the web service\n",
+    "url = 'http://879633c5-98fc-4d56-b090-b54249ddec68.westus.azurecontainer.io/score'\n",
     "\n",
-    "# The azureml-model-deployment header will force the request to go to a specific deployment.\n",
-    "# Remove this header to have the request observe the endpoint traffic rules\n",
-    "headers = {'Content-Type':'application/json', 'Authorization':('Bearer '+ api_key)}\n",
+    "headers = {'Content-Type':'application/json'}\n",
     "\n",
     "req = urllib.request.Request(url, body, headers)\n",
     "\n",
