--- a/docs/Lectures/Theme_4-Model_Deployment/Lecture_25-Deploying_to_Cloud/Lecture_25-Deploying_to_Cloud.ipynb
+++ b/docs/Lectures/Theme_4-Model_Deployment/Lecture_25-Deploying_to_Cloud/Lecture_25-Deploying_to_Cloud.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "Azure ML allows using Jupyter Notebooks and has built-in integration with popular ML libraries like Scikit-Learn, TensorFlow, PyTorch, and others.\n",
     "\n",
-    "In this lecture, we will explore the different levels of functionality of Azure ML, ranging from the no-code AutoML, to full-code SDK, and working with our own custom models. "
+    "In this lecture, we will explore the different levels of functionality of Azure ML, ranging from the no-code AutoML, to full-code SDK and working with our own custom models. "
    ]
   },
   {
@@ -260,7 +260,7 @@
     "\n",
     "- Click on the following [link](https://ml.azure.com) to navigate to Azure ML Studio. \n",
     "\n",
-    "The interface of Azure ML Studio is shown below. On the top of the page, our workspace should be listed. In this case, the workspace that we just created and named `My_workspace_1` is shown.\n",
+    "The interface of Azure ML Studio is shown below. On the top of the page, our workspaces should be listed under `All workspaces`. In this case, the workspace that we just created and named `My_workspace_1` is shown.\n",
     "\n",
     "<img src=\"images/ML_Studio.png\" width=\"700\">"
    ]
@@ -1106,7 +1106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
